--- a/page-prodact-card.html
+++ b/page-prodact-card.html
@@ -1,15 +1,129 @@
-<!DOCTYPE html><html lang="ru" class="page"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> --><meta http-equiv="X-UA-Compatible" content="ie=edge"><!-- <meta name="theme-color" content="#111111"> --><title>NFT-Hand-Made</title><!-- <link rel="preload" href="fonts/TTTravelsRegular.woff2" as="font" type="font/woff2" crossorigin>
+<!DOCTYPE html>
+<html lang="ru" class="page">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <meta name="theme-color" content="#111111"> -->
+  <title>NFT-Hand-Made</title>
+  <!-- <link rel="preload" href="fonts/TTTravelsRegular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/TTTravelsMedium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/TTTravelsDemiBold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/TTTravelsDemiBoldItalic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/TTTravelsBold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/TTTravelsExtraBold.woff2" as="font" type="font/woff2" crossorigin> --><link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin><link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin><link rel="preload" href="fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin><link rel="preload" href="fonts/MontserratSemiBoldItalic.woff2" as="font" type="font/woff2" crossorigin><link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin><link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin><link rel="stylesheet" href="css/vendor.css"><link rel="stylesheet" href="css/main.css"><script defer="defer" src="js/main.js"></script></head><body class="page__body"><div class="site-container site-container--page-product"><header class="header"><div class="header__container container flex"><a href="index.html" class="logo"><svg class="logo__img" width="188" height="80" alt="логотип High pass"><use xlink:href="img/sprite.svg#logo"></use></svg><!-- <img class="logo__img" src="img/logo.svg" alt="логотип High pass" width="188" height="60"> --></a><nav class="nav" title="main navigation"><ul class="list-reset nav__list flex"><li class="nav__item"><a href="index.html#about" class="nav__link link link-reset" data-menu-item data-scroll>О проекте</a></li><li class="nav__item nav__item--submenu"><a href="#" class="nav__link link-reset link nav__link--submenu">Мастерские</a><ul class="submenu list-reset"><li class="submenu__item"><a class="submenu__link link" href="index.html#help-neighbour">Помоги ближнему</a></li><li class="submenu__item"><a class="submenu__link link" href="index.html#palette-of-silence">Палитра тишины</a></li><li class="submenu__item"><a class="submenu__link link" href="index.html#altai-bag">Алтайская авоська</a></li><li class="submenu__item"><a class="submenu__link link" href="index.html#special-workshop">Особая мастерская</a></li></ul></li><li class="nav__item"><a href="index.html#contacts" class="nav__link link link-reset" data-menu-item data-scroll>Контакты</a></li><li class="nav__item"><a href="аltai.html" class="nav__link link link-reset">Алтай без ограничений</a></li><li class="nav__item"><a href="#" class="nav__link link link-reset">En</a> <span>/</span> <a href="#" class="nav__link link link-reset">Ru</a></li><li class="nav__item nav__item--submenu"><a href="#" class="nav__link link-reset link nav__link--submenu"><svg width="56" height="56"><use xlink:href="img/sprite.svg#social"></use></svg></a><ul class="submenu list-reset" title="social navigation"><li class="submenu__item"><a href="https://www.facebook.com/altai.antonenko" target="_blank" class="submenu__link link" aria-label="Наша страничка в Фейсбуке"><svg width="35" height="35"><use xlink:href="img/sprite.svg#facebook"></use></svg></a></li><li class="submenu__item"><a href="https://vk.com" target="_blank" class="submenu__link link" aria-label="Наша страничка во Вконтакте"><svg width="45" height="26"><use xlink:href="img/sprite.svg#vk"></use></svg></a></li><li class="submenu__item"><a href="https://twitter.com/NFT_Hend_Made" target="_blank" class="submenu__link link" aria-label="Наша страничка в Твиттере"><svg width="35" height="35"><use xlink:href="img/sprite.svg#twitter"></use></svg></a></li><li class="submenu__item"><a href="https://www.instagram.com/altai_bez_ogranichenj" target="_blank" class="submenu__link link" aria-label="Наша страничка в Инстаграме"><svg class="promo__icon" width="35" height="35"><use xlink:href="img/sprite.svg#instagram"></use></svg></a></li></ul></li></ul></nav><!-- <div class="switcher">
+  <link rel="preload" href="fonts/TTTravelsExtraBold.woff2" as="font" type="font/woff2" crossorigin> -->
+
+  <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Montserrat-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/MontserratSemiBoldItalic.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Montserrat-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="css/vendor.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/main.js"></script>
+</head>
+
+<body class="page__body">
+  <div class="site-container site-container--page-product">
+    <header class="header">
+  <div class="header__container container flex">
+    <a href="index.html" class="logo link link-reset">
+      <svg class="logo__img" width="188" height="80" alt="логотип High pass">
+        <use xlink:href="img/sprite.svg#logo"></use>
+      </svg>
+      <!-- <img class="logo__img" src="img/logo.svg" alt="логотип High pass" width="188" height="60"> -->
+    </a>
+    <nav class="nav" title="main navigation">
+      <ul class="list-reset nav__list flex">
+        <li class="nav__item"><a href="index.html#about" class="nav__link link link-reset" data-menu-item data-scroll>О проекте</a></li>
+        <li class="nav__item nav__item--submenu">
+          <a href="#" class="nav__link link-reset link nav__link--submenu">Мастерские</a>
+          <ul class="submenu list-reset">
+            <li class="submenu__item"><a class="submenu__link link" href="index.html#help-neighbour">Помоги ближнему</a></li>
+            <li class="submenu__item"><a class="submenu__link link" href="index.html#palette-of-silence">Палитра тишины</a></li>
+            <li class="submenu__item"><a class="submenu__link link" href="index.html#altai-bag">Алтайская авоська</a></li>
+            <li class="submenu__item"><a class="submenu__link link" href="index.html#special-workshop">Особая мастерская</a></li>
+          </ul>
+        </li>
+        <li class="nav__item"><a href="index.html#contacts" class="nav__link link link-reset" data-menu-item data-scroll>Контакты</a></li>
+        <li class="nav__item"><a href="аltai.html" class="nav__link link link-reset">Алтай без ограничений</a></li>
+        <li class="nav__item nav__item--submenu">
+          <a href="#" class="nav__link link-reset link nav__link--submenu">
+            <svg width="56" height="56">
+              <use xlink:href="img/sprite.svg#social"></use>
+            </svg>
+          </a>
+          <ul class="submenu list-reset" title="social navigation">
+            <li class="submenu__item">
+              <a href="https://www.facebook.com/altai.antonenko" target="_blank" class="submenu__link link" aria-label="Наша страничка в Фейсбуке">
+                <svg width="35" height="35">
+                  <use xlink:href="img/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="submenu__item">
+              <a href="https://vk.com/altai.antonenko" target="_blank" class="submenu__link link" aria-label="Наша страничка во Вконтакте">
+                <svg width="45" height="26">
+                  <use xlink:href="img/sprite.svg#vk"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="submenu__item">
+              <a href="https://twitter.com/NFT_Hend_Made" target="_blank" class="submenu__link link" aria-label="Наша страничка в Твиттере">
+                <svg width="35" height="35">
+                  <use xlink:href="img/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="submenu__item">
+              <a href="https://www.instagram.com/altai_bez_ogranichenj" target="_blank" class="submenu__link link" aria-label="Наша страничка в Инстаграме">
+                <svg class="promo__icon" width="35" height="35">
+                  <use xlink:href="img/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav__item">
+          <div class="lang">
+            <a href="#" class="lang__link lang__link--current link-reset">Рус</a>
+            <span>/</span>
+            <a href="#/en" class="lang__link link-reset">Eng</a>
+          </div>
+          </li>
+      </ul>
+    </nav>
+    <!-- <div class="switcher">
       <input id="lang" class="switcher__input visually-hidden" type="checkbox" checked>
       <label class="switcher__label" for="lang">
       </label>
-      <span class="switcher__lang switcher__lang--ru">Ru</span>
-      <span class="switcher__lang switcher__lang--en">En</span>
-    </div> --></div></header><main class="main"><div class="container"><ul class="breadcrumbs list-reset"><li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link">Главная</a></li><li class="breadcrumbs__item"><a href="index.html#workshops" class="breadcrumbs__link">Мастерские</a></li><li class="breadcrumbs__item"><a href="index.html#workshops" class="breadcrumbs__link">Мастерская помоги ближнему</a></li><li class="breadcrumbs__item"><a class="breadcrumbs__link">Биткоин настольный</a></li></ul></div><section class="prodact-card"><div class="container"><h2 class="prodact-card__title section-title">Биткоин Деревянный</h2><div class="prodact-card__content grid"><div class="prodact-card-images"><div class="swiper prodact-card-images-slider"><!-- <button class="btn-reset slider-nav__btn prodact-card-images__prev slider-btn">
+      <span class="switcher__lang switcher__lang--ru">Рус</span>
+      <span class="switcher__lang switcher__lang--en">Eng</span>
+    </div> -->
+  </div>
+
+</header>
+
+    <main class="main">
+      <div class="container">
+  <ul class="breadcrumbs list-reset">
+    <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link">Главная</a></li>
+    <li class="breadcrumbs__item"><a href="index.html#workshops" class="breadcrumbs__link">Мастерские</a></li>
+    <li class="breadcrumbs__item"><a href="index.html#workshops" class="breadcrumbs__link">Мастерская помоги ближнему</a></li>
+    <li class="breadcrumbs__item"><a class="breadcrumbs__link">Биткоин настольный</a></li>
+  </ul>
+</div>
+
+      <section class="prodact-card">
+  <div class="container">
+    <h2 class="prodact-card__title section-title">Биткоин Деревянный</h2>
+    <div class="prodact-card__content grid">
+      <div class="prodact-card-images">
+        <div class="swiper prodact-card-images-slider">
+          <!-- <button class="btn-reset slider-nav__btn prodact-card-images__prev slider-btn">
             <svg>
               <use xlink:href="img/sprite.svg#left-arrow"></use>
             </svg>
@@ -18,4 +132,86 @@
             <svg>
               <use xlink:href="img/sprite.svg#right-arrow"></use>
             </svg>
-          </button> --><div class="swiper-wrapper"><div class="prodact-card-img"></div><div class="swiper-slide"><picture><source srcset="img/prodacts/bitcoin.webp" type="image/webp"><img loading="lazy" src="img/prodacts/bitcoin.png" class="image" width="287" height="354" alt="bitcoin"></picture></div><div class="swiper-slide"><picture><source srcset="img/prodacts/bitcoin-in-box.webp" type="image/webp"><img loading="lazy" src="img/prodacts/bitcoin-in-box.png" class="image" width="287" height="354" alt="bitcoin"></picture></div><div class="swiper-slide"><picture><source srcset="img/prodacts/bitcoin-box.webp" type="image/webp"><img loading="lazy" src="img/prodacts/bitcoin-box.png" class="image" width="287" height="354" alt="bitcoin"></picture></div></div></div><div class="swiper prodact-card-images-nav"><div class="swiper-wrapper"><div class="swiper-slide"><picture><source srcset="img/prodacts/bitcoin.webp" type="image/webp"><img loading="lazy" src="img/prodacts/bitcoin.png" class="image" width="38" height="47" alt="bitcoin"></picture></div><div class="swiper-slide"><picture><source srcset="img/prodacts/bitcoin-in-box.webp" type="image/webp"><img loading="lazy" src="img/prodacts/bitcoin-in-box.png" class="image" width="38" height="47" alt="bitcoin"></picture></div><div class="swiper-slide"><picture><source srcset="img/prodacts/bitcoin-box.webp" type="image/webp"><img loading="lazy" src="img/prodacts/bitcoin-box.png" class="image" width="38" height="47" alt="bitcoin"></picture></div></div></div></div></div></div></section></main><footer class="footer"><div class="container"></div></footer></div></body></html>
+          </button> -->
+          <div class="swiper-wrapper">
+            <!-- <div class="prodact-card-img"></div> -->
+            <div class="swiper-slide">
+              <div class="card-img">
+                <picture class="card-img__pic">
+                  <source srcset="img/prodacts/bitcoin.webp" type="image/webp">
+                  <img loading="lazy" src="img/prodacts/bitcoin.png" width="287" height="354" alt="bitcoin">
+                </picture>
+              </div>
+              <!-- <picture class="slide-image">
+                <source srcset="img/prodacts/bitcoin.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin.png" width="287" height="354" alt="bitcoin">
+              </picture> -->
+            </div>
+            <div class="swiper-slide">
+              <div class="card-img">
+                <picture class="card-img__pic">
+                  <source srcset="img/prodacts/bitcoin-in-box.webp" type="image/webp">
+                  <img loading="lazy" src="img/prodacts/bitcoin-in-box.png" width="287" height="354" alt="bitcoin">
+                </picture>
+              </div>
+              <!-- <picture class="card-img__pic">
+                <source srcset="img/prodacts/bitcoin-in-box.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin-in-box.png" width="287" height="354" alt="bitcoin">
+              </picture> -->
+            </div>
+            <div class="swiper-slide">
+              <div class="card-img">
+                <picture class="card-img__pic">
+                  <source srcset="img/prodacts/bitcoin-box.webp" type="image/webp">
+                  <img loading="lazy" src="img/prodacts/bitcoin-box.png" width="287" height="354" alt="bitcoin">
+                </picture>
+              </div>
+              <!-- <picture class="card-img__pic">
+                <source srcset="img/prodacts/bitcoin-box.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin-box.png" width="287" height="354" alt="bitcoin">
+              </picture> -->
+            </div>
+          </div>
+        </div>
+        <div class="swiper prodact-card-images-nav">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <picture class="swiper-slide__pic">
+                <source srcset="img/prodacts/bitcoin.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin.png" width="38" height="60" alt="bitcoin">
+              </picture>
+            </div>
+            <div class="swiper-slide">
+              <picture class="swiper-slide__pic">
+                <source srcset="img/prodacts/bitcoin-in-box.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin-in-box.png" width="38" height="60" alt="bitcoin">
+              </picture>
+            </div>
+            <div class="swiper-slide">
+              <picture class="swiper-slide__pic">
+                <source srcset="img/prodacts/bitcoin-box.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin-box.png" width="38" height="60" alt="bitcoin">
+              </picture>
+            </div>
+            <!-- <div class="swiper-slide">
+              <picture class="swiper-slide__pic">
+                <source srcset="img/prodacts/bitcoin-set.webp" type="image/webp">
+                <img loading="lazy" src="img/prodacts/bitcoin-set.png" width="38" height="60" alt="bitcoin">
+              </picture>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+    </main>
+    <footer class="footer">
+  <div class="container"></div>
+</footer>
+
+  </div>
+</body>
+
+</html>
